# ble_hrs_central_cursor

./: .gitignore  CMakeLists.txt  Kconfig  README.md  README.rst  prj.conf  sample.yaml
cmake/: flash_size_summary.py.in
src/: main.c
